objects/ssot__ContactPoint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactEndTime__c</fullName>
        <label>Best Time To Contact End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactStartTime__c</fullName>
        <label>Best Time To Contact Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BestTimeToContactTimezone__c</fullName>
        <label>Best Time to Contact Timezone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForBusinessUse__c</fullName>
        <label>For Business Use</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForPersonalUse__c</fullName>
        <label>For Personal Use</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Contact Point Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUndeliverable__c</fullName>
        <label>Is Undeliverable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRole__c</fullName>
        <label>Party Role</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreferredRankNumber__c</fullName>
        <label>Preferred Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryFlag__c</fullName>
        <label>Primary Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileFirstCreatedDate__c</fullName>
        <label>Profile First Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileLastUpdatedDate__c</fullName>
        <label>Profile Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileOccurrenceCount__c</fullName>
        <label>Profile Occurrence Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TimezoneCode__c</fullName>
        <label>Timezone Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
</CustomObject>